--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,18 @@
 default: &default
-  adapter: sqlite3
+  # adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: db/development.postgresql
 
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: db/test.postgresql
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: db/production.postgresql
